--- a/Dumaguete OrNV bioassay 1.ipynb
+++ b/Dumaguete OrNV bioassay 1.ipynb
@@ -15,12 +15,11 @@
     "This virus was isolated from a single infected *Oryctes rhinoceros* Guam biotype specimen collected near Dumaguete, Negros Island, Philippines in January 2017. \n",
     "\n",
     "### Test Insects\n",
-    "\n",
     "Test insects were collected weekly from 31 coconut rhinoceros beetle pheromone traps (barrel traps) at the University of Guam Agricultural Experiment Station at Yigo. Beetles were held individually in numbered Mason jars partially filled with moist peat moss which were stored in an environmental cabinet at a temperature of 80 degrees F. Each was fed a slice of banana weekly.  Beetles were reared an average of 46 days (range: 23 d to 75 d) prior to treatment. \n",
     "\n",
     "### Treatment\n",
     "* 20 beetles were selected at random for treatment and another 20 were selected for experimental control\n",
-    "* A 1 ml sample of the virus was diluted by adding 1 ml of a 10% sucrose solution. Each beetle was given a 40 microlitre dose by pipetting a drop onto its mouthparts. A placebo was not given to beetles in the experimental control group.\n",
+    "* 100 mg of sucrose was disolved in a 1 ml sample of the virus. Each beetle was given a 40 microlitre dose of this solution by pipetting a drop onto its mouthparts. A placebo was not given to beetles in the experimental control group.\n",
     "* All beetles were provided a slice of banana on the day following treatment.\n",
     "\n",
     "### Observation procedure\n",
